log
Thu 14 Sep 2023 02:22:19 PM UTC: 
 tests:  1|8
total_score: 0/70
c62c5f1
Thu 14 Sep 2023 11:57:34 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   41 |   if (map =NULL){
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
95d378e
